# RustWorld

./: README.md
rustdemo/demo/: .env.example  .gitignore  Cargo.toml  README.md  init_db.sql  setup_env.sh
rustdemo/demo/src/: config.rs  main.rs
rustdemo/demo/src/db/: mod.rs
rustdemo/demo/src/handlers/: mod.rs
rustdemo/demo/src/models/: mod.rs
